--- a/RawBencher/packages.config
+++ b/RawBencher/packages.config
@@ -50,7 +50,10 @@
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net48" />
   <package id="NHibernate" version="5.3.3" targetFramework="net48" />
+  <package id="NLog" version="4.7.3" targetFramework="net48" />
   <package id="NPoco" version="4.0.2" targetFramework="net472" />
+  <package id="Platform.NET" version="1.2.4" targetFramework="net48" />
+  <package id="Platform.Xml.Serialization" version="1.2.4" targetFramework="net48" />
   <package id="Remotion.Linq" version="2.2.0" targetFramework="net462" />
   <package id="Remotion.Linq.EagerFetching" version="2.2.0" targetFramework="net462" />
   <package id="RepoDb" version="1.12.0" targetFramework="net48" />
@@ -62,6 +65,8 @@
   <package id="ServiceStack.OrmLite" version="5.9.2" targetFramework="net48" />
   <package id="ServiceStack.OrmLite.SqlServer" version="5.9.2" targetFramework="net48" />
   <package id="ServiceStack.Text" version="5.9.2" targetFramework="net48" />
+  <!--<package id="Shaolinq" version="1.9.5" targetFramework="net48" />
+  <package id="Shaolinq.SqlServer" version="1.9.5" targetFramework="net48" />-->
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Collections" version="4.3.0" targetFramework="net461" />
